Fix for profile data not showing up on page, Fix for masks not working on user registration, Fix for spelling of organization on profile page, Fix Made it so user cant leave the user data empty on profile page, Fix updated color of edit tect on chater for profile page, Fix removed dotted line under editable fields on profile page, FIx removed input box from current role in rcr modal.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -195,6 +195,18 @@ a:visited {
     color: #FF0000;
 }
 
+.current-role-class {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+}
+
 
 /* Styling for registration modal */
 
@@ -204,4 +216,16 @@ a:visited {
 
 .modal-border {
     border: 1px solid #ccc;
+}
+
+
+/* Styling for Profile page */
+
+.format-chapter-class {
+    text-decoration: none;
+    color: #428bca;
+}
+
+.editable-click {
+    border-bottom: none !important;
 }
